[package]
name = "uaddr"
version = "0.4.1"
edition = "2021"
rust-version = "1.82.0"
authors = ["Hantong Chen <cxwdyx620@gmail.com>"]
categories = ["network-programming", "no-std"]
description = "A unified address type that can represent an IPv4 / IPv6 socket address, a UNIX domain socket (UDS) address, or a hostname with a port."
keywords = ["addr", "inet", "unix", "host"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hanyu-dev/uaddr"

[dependencies]
itoa = "1.0"
memchr = { version = "2.8", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
socket2 = { version = "0.6.3", optional = true }
tokio = { version = "1.50", features = ["net", "rt"], optional = true }
wrapper-lite = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.183", default-features = false }

[dev-dependencies]
foldhash = { version = "0.2.0", default-features = false }
rstest = { version = "0.26.1", default-features = false }
serde_test = "1.0"
tokio = { version = "1.50", features = ["rt", "macros"] }
uaddr = { path = ".", features = ["std", "tokio", "serde", "socket2"] }

[features]
default = ["std"]

# Enable Rust's `std` support.
std = ["memchr/std"]

# Bridge feature: enable features related to crate `serde`.
serde = ["dep:serde"]

# Bridge feature: enable features related to crate `tokio`.
tokio = ["std", "dep:tokio"]

# Bridge feature: enable features related to crate `socket2`.
socket2 = ["std", "dep:socket2"]

[lints]
# ---
clippy.pedantic = { level = "warn", priority = -1 }
clippy.nursery = { level = "warn", priority = -1 }
# ---
clippy.allow_attributes_without_reason = "warn"
clippy.assertions_on_result_states = "warn"
clippy.cognitive_complexity = "warn"
clippy.create_dir = "warn"
clippy.dbg_macro = "warn"
clippy.disallowed_script_idents = "deny"
clippy.else_if_without_else = "deny"
clippy.exhaustive_enums = "warn"
clippy.exhaustive_structs = "warn"
clippy.filetype_is_file = "warn"
clippy.mem_forget = "warn"
clippy.missing_errors_doc = "allow"
clippy.mod_module_files = "deny"
clippy.module_name_repetitions = "allow"
clippy.multiple_inherent_impl = "warn"
clippy.must_use_candidate = "allow"
clippy.mutex_atomic = "warn"
clippy.mutex_integer = "warn"
clippy.panic = "warn"
clippy.string_slice = "warn"
clippy.todo = "warn"
clippy.unimplemented = "warn"
clippy.unreachable = "warn"
clippy.wildcard_dependencies = "deny"
# ---
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
rust.unexpected_cfgs = "allow"
rust.unknown_lints = "allow"
rust.unreachable_pub = "warn"
rust.unsafe_code = "warn"
